--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CLONELY | ONCE</title>
+    <title>(CL)ON(E)LY | ONCE</title>
   </head>
   <body>
     <noscript>
      
     </noscript>
     <div id="root"></div>
+    <script src="https://js.stripe.com/v3/"></script>
   </body>
 </html>
